# MEGN540-HW

./: .gitignore  LICENSE
Discrete_Filter/: CMakeLists.txt  Filter.c  filter.c  filter.h  main.c
Filter/: .clang-format  CMakeLists.txt  filter_solution.yaml  main.cpp  run_eval.bash
Filter/test/: test_main.cpp
Ring_Buffer/: CMakeLists.txt  Ring_Buffer.c  Ring_Buffer.h  main.c  ring_buffer.c  ring_buffer.h
